# mcp-langbase-reasoning

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  ENVIRONMENT_SETUP.md  FALLBACK_REMOVAL_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  TECHNICAL_DEBT_PLAN.md  TEST_PLAN.md
.github/workflows/: claude-code-review.yml  claude.yml
claudedocs/: CRATES_IO_IMPLEMENTATION_PLAN.md  CRATES_IO_PUBLISHING_GUIDE.md  TECHNICAL_DEBT_REMEDIATION_PLAN.md  fix-timestamp-corruption.md  research_decision_evidence_frameworks.md
claudedocs/archive/: PIPE_INTEGRATION_STRATEGY.md  SELF_IMPROVEMENT_DESIGN_PLAN.md  TECHNICAL_DEBT_REMEDIATION_PLAN.md  fallback-analysis.md  fix-auto-mode-fallback.md  fix-silent-record-skip.md  research_decision_evidence_frameworks.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEDUPLICATION_PLAN.md  IMPLEMENTATION_PLAN_BRANCH_NAME_FALLBACK_FIX.md  IMPLEMENTATION_PLAN_DECISION_EVIDENCE.md  IMPLEMENTATION_PLAN_ERROR_BODY_FIX.md  IMPLEMENTATION_PLAN_INVOCATION_LOGGING_FIX.md  LANGBASE_API.md  PRD.md  REASONING_TIME_MACHINE.md  STORAGE_PERSISTENCE_PLAN.md  TEST_COVERAGE_PLAN.md  WORKFLOW_PRESETS_PLAN.md
docs/archive/: HANDLER_CONSISTENCY_PLAN.md  IMPLEMENTATION_PLAN_ASSUMPTIONS_CHALLENGED_FIX.md  IMPLEMENTATION_PLAN_AUTO_MODE_FALLBACK_FIX.md  IMPLEMENTATION_PLAN_CONDITION_EVAL_FIX.md  IMPLEMENTATION_PLAN_JSON_FIX.md  IMPLEMENTATION_PLAN_RESPONSE_PARSING_FIX.md  MODE_ARCHITECTURE_PLAN.md  SILENT_FAILURES_FIX_PLAN.md
migrations/: 001_initial.sql  20240101000001_initial_schema.sql  20240102000001_branches_checkpoints.sql  20240103000001_graphs.sql  20240104000001_detections.sql  20240105000001_decision_evidence.sql  20240106000001_metrics_index.sql  20240107000001_fallback_tracking.sql  20240109000001_self_improvement_tables.sql  20240110000001_time_machine.sql
src/: lib.rs  main.rs  prompts.rs
src/config/: mod.rs
src/error/: mod.rs
src/langbase/: client.rs  mod.rs  types.rs  types_tests.rs
src/modes/: auto.rs  backtracking.rs  core.rs  counterfactual.rs  decision.rs  detection.rs  divergent.rs  evidence.rs  got.rs  got_tests.rs  linear.rs  mcts.rs  mod.rs  reflection.rs  timeline.rs  tree.rs
src/presets/: builtins.rs  executor.rs  mod.rs  registry.rs  types.rs
src/self_improvement/: allowlist.rs  analyzer.rs  baseline.rs  circuit_breaker.rs  cli.rs  config.rs  executor.rs  learner.rs  mod.rs  monitor.rs  pipes.rs  storage.rs  system.rs  types.rs
src/server/: handlers.rs  mcp.rs  mcp_tests.rs  mod.rs
src/storage/: mod.rs  sqlite.rs  types_tests.rs
tests/: config_env_test.rs  integration_test.rs  langbase_test.rs  mcp_protocol_test.rs  modes_test.rs  self_improvement_integration_test.rs  self_improvement_pipes_test.rs  self_improvement_test.rs  self_improvement_types_test.rs  storage_test.rs
